quick fixes to fonts and category alignment

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
          url('fonts/raleway-light-webfont.woff') format('woff'),
          url('fonts/raleway-light-webfont.ttf') format('truetype'),
          url('fonts/raleway-light-webfont.svg#ralewaylight') format('svg');
-    font-weight: light;
+    font-weight: lighter;
     font-style: normal;
 }
 
@@ -218,7 +218,7 @@ nav li:last-child {
 
 .category li {
   height: 50vw;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -227,8 +227,9 @@ nav li:last-child {
 .category a {
   color: white;
   text-transform: uppercase;
-  font-size: 1.25rem;
+  font-size: 2rem;
   font-weight: 500;
+  text-shadow: 2px 2px 11px rgba(0, 0, 0, 0.7);
 }
 
 .category a:hover {
@@ -236,7 +237,7 @@ nav li:last-child {
 }
 
 .small {
-  flex: 0 0 calc(50% - 3px);
+  flex: 0 0 calc(50% - 4px);
 }
 
 .large {
@@ -283,12 +284,13 @@ nav li:last-child {
 .mostloved p {
   text-transform: uppercase;
   line-height: 3;
+  color: #969696;
 }
 
 /* ------ signup ------ */
 
 .signup {
-  background: url(images/wave-bkgd.jpg) center bottom no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(images/wave-bkgd.jpg) center bottom no-repeat;
   color: white;
   margin-bottom: 10px;
   text-shadow: 2px 2px 11px rgba(0, 0, 0, 0.7);
@@ -420,11 +422,11 @@ footer a {
   }
 
   .small {
-    flex: 0 0 calc(25% - 3px);
+    flex: 0 0 calc(25% - 6px);
   }
 
   .large {
-      flex: 0 0 calc(50% - 3px);
+      flex: 0 0 calc(50% - 4px);
   }
 
   .mostloved li {
@@ -473,7 +475,7 @@ footer a {
   }
 
   .handcrafted .container, .signup .container {
-    max-width: 720px;
+    max-width: 550px;
   }
 
 }
